--- a/SistemaVenda/Views/Home/Index.cshtml
+++ b/SistemaVenda/Views/Home/Index.cshtml
@@ -1,1 +1,53 @@
-﻿
+﻿@{ 
+    ViewData["Title"] = "Menu";
+}
+
+<div class="row" style="text-align:center;">
+    <div class="col-md-4">
+        <div>
+            <a href="../Views/Cliente/Index.cshtml"><img src="~/img/clientes.png" width="150" height="150"/></a>
+        </div>
+        <span>Cadastro de Clientes</span>
+    </div>
+    <div class="col-md-4">
+        <div>
+            <a href="../Views/Categoria/Index.cshtml"><img src="~/img/categorias.png" width="150" height="150" /></a>
+        </div>
+        <span>Cadastro de Categorias</span>
+
+    </div>
+    <div class="col-md-4">
+        <div>
+            <a href="../Views/Produto/Index.cshtml"><img src="~/img/produtos.png" width="150" height="150" /></a>
+        </div>
+        <span>Cadastro de Produtos</span>
+    </div>
+</div>
+
+
+<br />
+<br />
+<div class="row" style="text-align:center;">
+    <div class="col-md-4">
+        <div>
+            <a href="../Views/Venda/Index.cshtml"><img src="~/img/vendas.png" width="150" height="150" /></a>
+        </div>
+        <span>Cadastro de Vendas</span>
+    </div>
+
+    <div class="col-md-4">
+        <div>
+            <a href="../Views/Relatorio/Grafico.cshtml"><img src="~/img/relatorios.png" width="150" height="150" /></a>
+        </div>
+        <span>Relatórios</span>
+    </div>
+    <div class="col-md-4">
+        <div>
+            <a href="../Views/Configuracao/Index.cshtml"><img src="~/img/configuracoes.png" width="150" height="150"/></a>
+        </div>
+        <span>Configurações</span>
+    </div>
+
+
+
+</div>
