--- a/SistemaVenda/Views/Relatorio/Grafico.cshtml
+++ b/SistemaVenda/Views/Relatorio/Grafico.cshtml
@@ -1,1 +1,32 @@
-﻿
+﻿@{ 
+    ViewData["Title"] = "Gráfico";
+}
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.js" integrity="sha512-G8JE1Xbr0egZE5gNGyUm1fF764iHVfRXshIoUWCTPAbKkkItp/6qal5YAHXrxEu4HNfPTQs6HOu3D5vCGS1j3w==" crossorigin="anonymous"></script>
+
+<h2>Total de Vendas por Produtos</h2>
+<hr />
+
+<canvas id="myChart"></canvas>
+
+<script>
+    var ctx = document.getElementById('myChart').getContext('2d');
+    var chart = new Chart(ctx, {
+        // The type of chart we want to create
+        type: 'pie',
+
+        // The data for our dataset
+        data: {
+            labels: [@Html.Raw(ViewBag.Labels)],
+            datasets: [{
+                label: 'My First dataset',
+                backgroundColor: [@Html.Raw(ViewBag.Cores)],
+                borderColor: '#fff',
+                data: [@Html.Raw(ViewBag.Valores)]
+            }]
+        },
+
+        // Configuration options go here
+        options: {}
+    });
+</script>
