Arquitetura em Camadas (Parte 1) Categoria listagem

--- a/SistemaVenda/Views/Categoria/Index.cshtml
+++ b/SistemaVenda/Views/Categoria/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Menu";
+    ViewData["Title"] = "Categoria";
 }
 
-@model List<SistemaVenda.Entidades.Categoria>;
+@model List<SistemaVenda.Models.CategoriaViewModel>;
 
 <h2>Categoria</h2>
 <hr />
